# libsupermesh

./: AUTHORS  CMakeLists.txt  COPYING  README.md  contributors.txt  pyproject.toml
.github/workflows/: build.yml  release.yml
cmake-modules/: FindPETSc.cmake  ResolveCompilerPaths.cmake
config/: SuperMesh.pc.in  libsupermesh.pc.in
doc/: bibliography.bib  hex_ordering.odg  manual.tex  version.tex
include/: C++_Debug.h  Data_Structures_C.h  Element_Intersection.h  Halos_IO.h  MeshDataStream.h  Node_Owner_Finder.h  Precision.h  R-Tree_Intersection_Finder_C++.h  Read_Halos_C++.h  Reference_count_block_csr_matrix.F90  Reference_count_block_dynamic_csr_matrix.F90  Reference_count_csr_matrix.F90  Reference_count_csr_sparsity.F90  Reference_count_dynamic_csr_matrix.F90  Reference_count_element_type.F90  Reference_count_halo_type.F90  Reference_count_mesh_type.F90  Reference_count_picker_type.F90  Reference_count_quadrature_type.F90  Reference_count_scalar_field.F90  Reference_count_tensor_field.F90  Reference_count_vector_field.F90  SuperMeshConfig.h.in  Tokenize.h  Unittest_Tools_Cpp.h  c++debug.h  confdefs.h  confdefs.h.in  fdebug.h  libsupermesh-c.h  libsupermesh.h.in  libsupermesh_configuration.h.in  libsupermesh_debug.h  libsupermesh_debug_C.h
libjudy/: CMakeLists.txt
libspud/: CMakeLists.txt
libwm/: Wm4Command.cpp  Wm4Command.h  Wm4Intersector.cpp  Wm4Intersector.h  Wm4Intersector1.cpp  Wm4Intersector1.h  Wm4IntrQuad2Quad2.cpp  Wm4IntrQuad2Quad2.h  Wm4IntrTetrahedron3Tetrahedron3.cpp  Wm4IntrTetrahedron3Tetrahedron3.h  Wm4IntrTriangle2Triangle2.cpp  Wm4IntrTriangle2Triangle2.h  Wm4LinComp.h  Wm4Math.cpp  Wm4Math.h  Wm4Memory.h  Wm4Plane3.h  Wm4Quad2.h  Wm4System.cpp  Wm4System.h  Wm4THashSet.h  Wm4THashTable.h  Wm4TMinHeap.h  Wm4TSmallUnorderedSet.h  Wm4TStringHashTable.h  Wm4TTuple.h  Wm4Tetrahedron3.h  Wm4Triangle2.h  Wm4Vector2.cpp  Wm4Vector2.h  Wm4Vector3.cpp  Wm4Vector3.h
spatialindex-1.8.0/: CMakeLists.txt  Makefile  config.status  libtool
spatialindex-1.8.0/include/: Makefile
spatialindex-1.8.0/include/spatialindex/: LineSegment.h  MVRTree.h  MovingPoint.h  MovingRegion.h  Point.h  RTree.h  Region.h  SpatialIndex.h  TPRTree.h  TimePoint.h  TimeRegion.h
spatialindex-1.8.0/src/: Makefile  libspatialindex.pc
spatialindex-1.8.0/src/capi/: BoundsQuery.cc  CountVisitor.cc  CustomStorage.cc  DataStream.cc  IdVisitor.cc  Index.cc  LeafQuery.cc  Makefile  ObjVisitor.cc  Utility.cc  sidx_api.cc
spatialindex-1.8.0/src/mvrtree/: Index.cc  Index.h  Leaf.cc  Leaf.h  MVRTree.cc  MVRTree.h  Makefile  Node.cc  Node.h  PointerPoolNode.h  Statistics.cc  Statistics.h
spatialindex-1.8.0/src/rtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Makefile  Node.cc  Node.h  PointerPoolNode.h  RTree.cc  RTree.h  Statistics.cc  Statistics.h
spatialindex-1.8.0/src/spatialindex/: LineSegment.cc  Makefile  MovingPoint.cc  MovingRegion.cc  Point.cc  Region.cc  SpatialIndexImpl.cc  TimePoint.cc  TimeRegion.cc
spatialindex-1.8.0/src/storagemanager/: Buffer.cc  Buffer.h  DiskStorageManager.cc  DiskStorageManager.h  Makefile  MemoryStorageManager.cc  MemoryStorageManager.h  RandomEvictionsBuffer.cc  RandomEvictionsBuffer.h
spatialindex-1.8.0/src/tools/: Makefile  Tools.cc
spatialindex-1.8.0/src/tprtree/: Index.cc  Index.h  Leaf.cc  Leaf.h  Makefile  Node.cc  Node.h  PointerPoolNode.h  Statistics.cc  Statistics.h  TPRTree.cc  TPRTree.h
spatialindex-1.8.0/test/: Makefile
spatialindex-1.8.0/test/mvrtree/: Generator.cc  MVRTreeLoad.cc  MVRTreeQuery.cc  (+1 more)
spatialindex-1.8.5/: Makefile.in  configure
spatialindex-1.8.5/include/: Makefile.in
spatialindex-1.8.5/src/: Makefile.in
src/: Adjacency_Lists.F90  C++_Debug.cpp  C_bindings.F90  Data_Structures_C++.cpp  Data_Structures_C.c  Data_structures.F90  Data_structures_C.c  Debug.F90  Debug_C.c  Debug_Parameters.F90  Element_Intersection.cpp  Element_Intersection.cpp_OLD  Element_Numbering.F90  Element_set.F90  Elements.F90  Embed_Python_Fortran.F90  EventCounter.F90  Fields.F90  Fields_Allocates.F90  Fields_Base.F90  Fields_Data_Types.F90  Fields_Dummy.F90  Fields_Manipulation.F90  Futils.F90  Global_Numbering.F90  Global_Parameters.F90  Graphs.F90  Grundmann_Moeller_Quadrature.F90  Halo_Data_Types.F90  Halo_Ownership.F90  Halos_Allocates.F90  Halos_Base.F90  Halos_Communications.F90  Halos_Debug.F90  Halos_IO.cpp  Halos_Numbering.F90  Halos_Ownership.F90  Halos_Repair.F90  Integer_Hash_Table.F90  Integer_Map.F90  (+52 more)
src/supermesh/: __init__.py
src/tests/: test_element_intersector.F90  test_intersection_finder_2d.F90  test_intersection_finder_3d.F90  test_intersection_finder_completeness.F90  test_intersection_finder_completeness_1d.F90  test_intersection_finder_completeness_2d.F90  test_intersection_finder_completeness_3d.F90  test_intersection_finder_periodic.F90  test_intersection_finder_seeds.F90  test_interval_intersector.F90  test_main.cpp  test_parallel_p1_inner_product_2d.F90  test_parallel_p1_inner_product_3d.F90  test_parallel_p2_inner_product_2d.F90  test_parallel_partition_a.F90  test_parallel_partition_ab.F90  test_parallel_partition_ab_optimal_transfer.F90  test_parallel_partition_ab_optimal_transfer_data.F90  test_parallel_partition_ab_optimal_transfer_data_rtree_once.F90  test_parallel_partition_ab_optimal_transfer_data_rtree_once_par.F90  test_parallel_partition_b.F90  test_parallel_partition_complete_ab.F90  test_parallel_partition_complete_ab_same_algo.F90  test_parallel_supermesh.F90  test_parallel_supermesh_2d.F90  test_parallel_universal_node_numbering.F90  test_tet_intersector.F90  test_tri_intersector.F90
tests/: benchmark_parallel.F90  benchmark_parallel_complete.F90  benchmark_parallel_complete_3d.F90  benchmark_parallel_p1_inner_product.F90  benchmark_parallel_p1_inner_product_3d.F90  benchmark_parallel_p2_inner_product.F90  benchmark_parallel_partition_ab.F90  benchmark_parallel_partition_ab_serial.F90  benchmark_serial.F90  benchmark_serial_3d.F90  benchmark_serial_same_algo.F90  benchmark_serial_same_algo_3d.F90  benchmark_tet_intersector.F90  benchmark_tri_intersector.F90
(+45 files in other folders)
